# PFcardParser

./: PFcardparser2.py  bp.docx  bp3.html  brookefield.docx  dtc.html  dtc2.docx  main.py  pyproject.toml
