[tool.poetry]
name = "tastyforestgreensale"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.15.2"
bs4 = "^0.0.1"
pypandoc = "^1.5"
lxml = "^4.6.2"
word2html = "^0.2.0"
textile = "^4.0.1"
docx2txt = "^0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
